--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 node_modules/
 
 # 폴더 어떻게 제외하지?
-*-[0-9]/
+react-week1-assignment-1/
+react-week1-assignment-2/
+react-week2-assignment-1/
+react-week2-assignment-2/
+react-week3-assignment-1/
+react-week4-assignment-1/
+react-week4-assignment-2/
+
