5주차 코드숨 회고

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,6 @@ react-week2-assignment-2/
 react-week3-assignment-1/
 react-week4-assignment-1/
 react-week4-assignment-2/
+react-week5-assignment-1/
+
 
