7주차 코드숨 회고

--- a/week4/package.json
+++ b/week4/package.json
@@ -2,7 +2,7 @@
   "name": "demo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "Test.js",
   "scripts": {
     "start": "webpack serve",
     "test:unit": "jest",
