--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,8 @@ react-week3-assignment-1/
 react-week4-assignment-1/
 react-week4-assignment-2/
 react-week5-assignment-1/
+react-week6-assignment-1/
+react-week7-assignment-1/
+
 
 
